--- a/hooks/build
+++ b/hooks/build
@@ -1,3 +1,3 @@
 #!/bin/bash
 
-docker build --build-arg MONGO_VERSION=$SOURCE_BRANCH -f $DOCKERFILE_PATH -t $IMAGE_NAME
+docker build --build-arg MONGO_VERSION=$SOURCE_BRANCH -t $IMAGE_NAME .
